Update website To show projects

--- a/index.html
+++ b/index.html
@@ -5,8 +5,20 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div class="cover-container">
-        <h1>AREEB HAMAD MOHAMMED</h1>
+    <nav class="navbar">
+        <a class="navbar-brand">AREEB HAMAD MOHAMMED</a>
+        <button class="nav-item">
+            <a class="nav-link" href="About">About</a>
+        </button>
+        <button class="nav-item">
+            <a class="nav-link" href="Contact">Contact</a>
+        </button>
+    </nav>
+    <div class="container-md">
+        <h3>PROJECTS</h3>
+        <h5>Tile Map Editor - Levor</h5>
+        <p class="lead">A GUI application to create and edit maps for my games. Exporting maps as xml and using png images for tiles.</p>
+        <small> - Created in C# using WPF - </small>
     </div>
 </body>
 </html>
