--- a/index.html
+++ b/index.html
@@ -17,8 +17,12 @@
     <div class="container-md">
         <h3>PROJECTS</h3>
         <h5>Tile Map Editor - Levor</h5>
+        <small class="text-muted"><a href="http://hamad-am.github.io/levor/">Link To Project</a></small>
         <p class="lead">A GUI application to create and edit maps for my games. Exporting maps as xml and using png images for tiles.</p>
         <small> - Created in C# using WPF - </small>
+        <h5>2D Turn-Based RPG Video Game</h5>
+        <p class="lead">A small 2D pixelart video game.</p>
+        <small> - Created in C# using an implementation of the XNA framework - </small>
     </div>
 </body>
 </html>
